# bambu_watcher

./: .gitignore  Cargo.toml  README.md  auth.db  build.rs  config_default.yaml  tray.rc
.github/workflows/: rust.yaml
src/: alert.rs  app.rs  app_types.rs  auth.rs  client.rs  config.rs  conn_manager.rs  ftp.rs  icons.rs  logging.rs  main.rs  status.rs  tray.rs  ui.rs  ui_types.rs  utils.rs
src/cloud/: cloud_types.rs  errors.rs  mod.rs  projects.rs  streaming.rs
src/conn_manager/: conn_manager.rs  mod.rs
src/klipper/: klipper_types.rs  mod.rs
src/mqtt/: command.rs  message.rs  mod.rs  parse.rs
src/status/: bambu.rs  mod.rs
src/ui/: dashboard.rs  icons.rs  options.rs  plotting.rs  printer_widget.rs  printers.rs  project_view.rs  ui_types.rs  ui_utils.rs
