[package]
name = "bambu_watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
bambulab = "0.4.3"
dotenv = "0.15.0"
rumqttc = { version = "0.24.0", features = ["use-rustls"] }
rustls-native-certs = "0.7.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }
# openssl = { version = "0.10.64", features = ["vendored"] }
# paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
paho-mqtt = { version = "0.12.3", features = ["ssl"] }
serde_json = "1.0.117"
futures = { version = "0.3.30", default-features = false }

# eframe = { version = "0.27.0", features = ["persistence"] }
# egui = "0.27.0"
# egui_extras = "0.27.0"
