[package]
name = "bambu_watcher"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.56.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
anyhow = "1.0.83"
bambulab = "0.4.3"
dotenv = "0.15.0"
# rumqttc = { version = "0.24.0", features = ["use-rustls"] }
# rustls-native-certs = "0.7.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }
# openssl = { version = "0.10.64", features = ["vendored"] }
# paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
paho-mqtt = { version = "0.12.3", features = [] }
# paho-mqtt = { version = "0.12.3", features = ["ssl"] }
serde_json = "1.0.117"
futures = { version = "0.3.30", default-features = false }
tray-icon = "0.13.5"
winit = { version = "0.30.0", features = ["rwh_06"] }
# tray-item = "0.10.0"
image = "0.25"
imageproc = "0.24.0"
serde_yaml = "0.9.34"
notify-rust = { version = "4.11.0", features = ["async"] }
chrono = "0.4.38"
# tray-item = "0.10.0"
# egui_winit_platform = { version = "0.22.0", features = ["clipboard"] }
# egui-winit = "0.27.2"
egui = "0.27.2"
eframe = { version = "0.27", features = ["persistence"] }
dashmap = "5.5.3"
egui_extras = { version = "0.27.2", features = ["file", "image", "svg"] }
resvg = "=0.37.0"
egui_plot = "0.27.2"
suppaftp = { version = "5.3.1", features = ["deprecated", "native-tls"] }
zip = "1.2.3"
nanoid = "0.4.0"

# eframe = { version = "0.27.0", features = ["persistence"] }
# egui = "0.27.0"
# egui_extras = "0.27.0"

# [build-dependencies]
# embed-resource = "2.3"
