[package]
name = "bambu_watcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# [dependencies.windows]
# version = "0.56.0"
# features = [
#     "Data_Xml_Dom",
#     "Win32_Foundation",
#     "Win32_Security",
#     "Win32_System_Threading",
#     "Win32_UI_WindowsAndMessaging",
# ]

[build-dependencies]
dotenvy = "0.15.0"
vergen = { version = "8.3", features = ["git", "gitcl"] }
anyhow = "1"
# winres = "0.1.12"
winresource = "0.1.17"

[dependencies]
anyhow = "1.0.83"
# bambulab = "0.4.3"
dotenvy = "0.15.0"
serde = { version = "1.0.201", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "local-time",
    "env-filter",
    "json",
    "registry",
] }
serde_json = "1.0.117"
futures = { version = "0.3.30", default-features = false }
# tray-icon = "0.14.0"
winit = { version = "0.30.0", features = ["rwh_06"] }
# tray-item = "0.10.0"
image = "0.25"
imageproc = "0.24.0"
serde_yaml = "0.9.34"
notify-rust = { version = "4.11.0", features = ["async"] }
chrono = { version = "0.4.38", features = ["serde"] }
# tray-item = "0.10.0"
# egui_winit_platform = { version = "0.22.0", features = ["clipboard"] }
# egui-winit = "0.27.2"
egui = "0.27.2"
eframe = { version = "0.27", features = ["persistence"] }
dashmap = "5.5.3"
egui_extras = { version = "0.27.2", features = [
    "file",
    "image",
    "svg",
    "http",
] }
resvg = "=0.37.0"
egui_plot = "0.27.2"
# suppaftp = { version = "5.3.1", features = ["deprecated", "native-tls"] }
zip = "1.2.3"
nanoid = "0.4.0"
byteorder = "1.5.0"
paste = "1.0"
url = "2.5"

# # opens3.0.0{ version = "0.10.64", features = ["vendored"] }
# # paho-mqtt = { version = "0.12.3", features = ["vendored-ssl"] }
# paho-mqtt = { version = "0.12.3", features = [] }
# # paho-mqtt = { version = "0.12.3", features = ["ssl"] }

# rumqttc = { version = "0.24.0", features = ["use-rustls"] }
rumqttc = { version = "0.24.0", default-features = false, features = [
    # "use-native-tls",
    "use-rustls",
] }
# rustls = "0.23.5"
rustls-native-certs = "0.7.0"
# tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"
parking_lot = "0.12.2"
egui-phosphor = { version = "0.5.0", features = ["fill"] }
reqwest = { version = "0.12.4", features = ["rustls-tls", "json", "blocking"] }
cookie = "0.18.1"
cocoon = "0.4.1"
borsh = { version = "1.5.0", features = ["derive"] }
rand = "0.8.5"
# retina = "0.4.7"
base64 = "0.22.1"
regex = "1.10.4"
egui-data-table = "0.2.2"

# relm4 = { version = "0.8.0", features = ["macros"] }
# relm4-components = "0.8.0"
# relm4-icons = "0.8.0"

# iced = "0.12.1"
# iced_winit = "0.12.2"

# eframe = { version = "0.27.0", features = ["persistence"] }
# egui = "0.27.0"
# egui_extras = "0.27.0"

# [build-dependencies]
# embed-resource = "2.3"
